fix issue 30 test workflow